--- a/index.html
+++ b/index.html
@@ -188,6 +188,17 @@
       </div>
     </section>
 
+    <!-------------------featured-categories------------->
+    <section class="featured-categories">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4"><img src="images/categories1.jpg" alt=""></div>
+          <div class="col-md-4"><img src="images/categories2.jpg" alt=""></div>
+          <div class="col-md-4"><img src="images/categories3.jpg" alt=""></div>
+        </div>
+      </div>
+    </section>
+
     <!----------------On Sale product------------------>
     <section class="on-sale">
       <div class="container">
@@ -302,29 +313,201 @@
       </div>
     </section>
 
-    <!-------------------featured-categories------------->
-    <section class="featured-categories">
-      <div class="container">
+    <!---------------New Products--------->
+    <section class="new-products">
+       <div class="container">
+        <div class="title-box">
+          <h2>New Arrivals</h2>
+        </div>
         <div class="row">
-          <div class="col-md-4"><img src="images/categories1.jpg" alt=""></div>
-          <div class="col-md-4"><img src="images/categories2.jpg" alt=""></div>
-          <div class="col-md-4"><img src="images/categories3.jpg" alt=""></div>
+          <div class="col-md-3">
+            <div class="product-top">
+              <img src="images/product1.jpg">
+                <div class="overlay-right">
+                  <button class="btn btn-secondary" type="button" title="Quick Shop">
+                    <i class="fa fa-eye"></i>
+                  </button>
+                  <button class="btn btn-secondary" type="button" title="Add to Wishlist">
+                    <i class="fa fa-heart-o"></i>
+                  </button>
+                  <button class="btn btn-secondary" type="button" title="Add to Cart">
+                    <i class="fa fa-shopping-cart"></i>
+                  </button>
+                </div>
+            </div>
+            <div class="product-bottom text-center">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <h3>Fitness Watch</h3>
+              <h5>$40.00</h5>
+            </div>
+          </div>
+
+          <div class="col-md-3">
+            <div class="product-top">
+              <img src="images/product2.jpg">
+                <div class="overlay-right">
+                  <button class="btn btn-secondary" type="button" title="Quick Shop">
+                    <i class="fa fa-eye"></i>
+                  </button>
+                  <button class="btn btn-secondary" type="button" title="Add to Wishlist">
+                    <i class="fa fa-heart-o"></i>
+                  </button>
+                  <button class="btn btn-secondary" type="button" title="Add to Cart">
+                    <i class="fa fa-shopping-cart"></i>
+                  </button>
+                </div>
+            </div>
+            <div class="product-bottom text-center">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <h3>Smart Watch</h3>
+              <h5>$50.00</h5>
+            </div>
+          </div>
+
+          <div class="col-md-3">
+            <div class="product-top">
+              <img src="images/product3.jpg">
+                <div class="overlay-right">
+                  <button class="btn btn-secondary" type="button" title="Quick Shop">
+                    <i class="fa fa-eye"></i>
+                  </button>
+                  <button class="btn btn-secondary" type="button" title="Add to Wishlist">
+                    <i class="fa fa-heart-o"></i>
+                  </button>
+                  <button class="btn btn-secondary" type="button" title="Add to Cart">
+                    <i class="fa fa-shopping-cart"></i>
+                  </button>
+                </div>
+            </div>
+            <div class="product-bottom text-center">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <h3>Formarl Shoes</h3>
+              <h5>$500.00</h5>
+            </div>
+          </div>
+
+          <div class="col-md-3">
+            <div class="product-top">
+              <img src="images/product4.jpg">
+                <div class="overlay-right">
+                  <button class="btn btn-secondary" type="button" title="Quick Shop">
+                    <i class="fa fa-eye"></i>
+                  </button>
+                  <button class="btn btn-secondary" type="button" title="Add to Wishlist">
+                    <i class="fa fa-heart-o"></i>
+                  </button>
+                  <button class="btn btn-secondary" type="button" title="Add to Cart">
+                    <i class="fa fa-shopping-cart"></i>
+                  </button>
+                </div>
+            </div>
+            <div class="product-bottom text-center">
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <i class="fa fa-star"></i>
+              <h3>Leather Watch</h3>
+              <h5>$300.00</h5>
+            </div>
+          </div>
         </div>
       </div>
     </section>
 
-      <script>
-        function openmenu(){
-          document.getElementById("side-menu").style.display="block";
-          document.getElementById("menu-btn").style.display="none";
-          document.getElementById("close-btn").style.display="block";
-        }
-        function closemenu(){
-          document.getElementById("side-menu").style.display="none";
-          document.getElementById("menu-btn").style.display="block";
-          document.getElementById("close-btn").style.display="none";
-        }
-      </script>
+    <!---------------Website features--------->
+    <section class="website-features">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3 feature-box">
+            <img src="images/feature-1.png" alt="">
+            <div class="feature-text">
+              <p><b>100% Original items</b>are available at company.</p>
+            </div>
+          </div>
+          <div class="col-md-3 feature-box">
+            <img src="images/feature-2.png" alt="">
+            <div class="feature-text">
+              <p><b>Return within 30 days</b>of recieving your order.</p>
+            </div>
+          </div>
+          <div class="col-md-3 feature-box">
+            <img src="images/feature-3.png" alt="">
+            <div class="feature-text">
+              <p><b>Get free delivery for every</b>order on more than price.</p>
+            </div>
+          </div>
+          <div class="col-md-3 feature-box">
+            <img src="images/feature-4.jpg" alt="">
+            <div class="feature-text">
+              <p><b>Pay Online through multiple</b>options (card/Net banking)</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="footer">
+      <div class="container text-center">
+        <div class="row">
+          <div class="col-md-3">
+            <h1>Useful Links</h1>
+            <p>Privacy Policy</p>
+            <p>Terms of Use</p>
+            <p>Return Policy</p>
+            <p>Discount Coupons</p>
+          </div>
+
+          <div class="col-md-3">
+            <h1>Company</h1>
+            <p>About Us</p>
+            <p>Contact Us</p>
+            <p>Career</p>
+            <p>Affiliates</p>
+          </div>
+
+          <div class="col-md-3">
+            <h1>Follow Us On</h1>
+            <p><i class="fa fa-facebook-official"></i>Facebook</p>
+            <p><i class="fa fa-youtube-play"></i>Youtube</p>
+            <p><i class="fa fa-linkedin"></i>Linkedin</p>
+            <p><i class="fa fa-twitter"></i>Twitter</p>
+          </div>
+          <div class="col-md-3 footer-image">
+            <h1>Download App</h1>
+            <img src="images/app-logo.jpg">
+          </div>
+        </div>
+        <hr>
+        <p class="copyright">Made with<i class="fa fa-twitter"></i>by Easy Tutorials</p>
+      </div>
+    </section>
+
+
+    <script>
+      function openmenu(){
+        document.getElementById("side-menu").style.display="block";
+        document.getElementById("menu-btn").style.display="none";
+        document.getElementById("close-btn").style.display="block";
+      }
+      function closemenu(){
+        document.getElementById("side-menu").style.display="none";
+        document.getElementById("menu-btn").style.display="block";
+        document.getElementById("close-btn").style.display="none";
+      }
+    </script>
 
   </body>
 </html>
