Codificando página de produto

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <i class="fa fa-bars" id="menu-btn" onclick="openmenu()"></i>
         <i class="fa fa-times" id="close-btn" onclick="closemenu()"></i>
 
-        <div class="logo"></div>
+        <a href="index.html"><img src="images/logo.png" class="logo"></a>
         <input type="text" class="form-control">
         <span class="input-group-text"><i class="fa fa-search"></i></span>
       </div>
@@ -208,7 +208,7 @@
         <div class="row">
           <div class="col-md-3">
             <div class="product-top">
-              <img src="images/product1.jpg">
+              <a href="product.html"><img src="images/product1.jpg"></a>
                 <div class="overlay-right">
                   <button class="btn btn-secondary" type="button" title="Quick Shop">
                     <i class="fa fa-eye"></i>
@@ -234,7 +234,7 @@
 
           <div class="col-md-3">
             <div class="product-top">
-              <img src="images/product2.jpg">
+              <a href="product.html"><img src="images/product2.jpg"></a>
                 <div class="overlay-right">
                   <button class="btn btn-secondary" type="button" title="Quick Shop">
                     <i class="fa fa-eye"></i>
@@ -260,7 +260,7 @@
 
           <div class="col-md-3">
             <div class="product-top">
-              <img src="images/product3.jpg">
+              <a href="product.html"><img src="images/product3.jpg"></a>
                 <div class="overlay-right">
                   <button class="btn btn-secondary" type="button" title="Quick Shop">
                     <i class="fa fa-eye"></i>
@@ -286,7 +286,7 @@
 
           <div class="col-md-3">
             <div class="product-top">
-              <img src="images/product4.jpg">
+              <a href="product.html"><img src="images/product4.jpg"></a>
                 <div class="overlay-right">
                   <button class="btn btn-secondary" type="button" title="Quick Shop">
                     <i class="fa fa-eye"></i>
@@ -322,7 +322,7 @@
         <div class="row">
           <div class="col-md-3">
             <div class="product-top">
-              <img src="images/product1.jpg">
+              <a href="product.html"><img src="images/product1.jpg"></a>
                 <div class="overlay-right">
                   <button class="btn btn-secondary" type="button" title="Quick Shop">
                     <i class="fa fa-eye"></i>
@@ -348,7 +348,7 @@
 
           <div class="col-md-3">
             <div class="product-top">
-              <img src="images/product2.jpg">
+              <a href="product.html"><img src="images/product2.jpg"></a>
                 <div class="overlay-right">
                   <button class="btn btn-secondary" type="button" title="Quick Shop">
                     <i class="fa fa-eye"></i>
@@ -374,7 +374,7 @@
 
           <div class="col-md-3">
             <div class="product-top">
-              <img src="images/product3.jpg">
+              <a href="product.html"><img src="images/product3.jpg"></a>
                 <div class="overlay-right">
                   <button class="btn btn-secondary" type="button" title="Quick Shop">
                     <i class="fa fa-eye"></i>
@@ -400,7 +400,7 @@
 
           <div class="col-md-3">
             <div class="product-top">
-              <img src="images/product4.jpg">
+              <a href="product.html"><img src="images/product4.jpg"></a>
                 <div class="overlay-right">
                   <button class="btn btn-secondary" type="button" title="Quick Shop">
                     <i class="fa fa-eye"></i>
